--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.1",
+        "ramsey/uuid": "^4.1",
+        "realrashid/sweet-alert": "^3.1",
         "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
