--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     "require": {
         "php": "^7.2.5",
         "darryldecode/cart": "^4.2",
+        "doctrine/dbal": "^2.11",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "^7.2",
+        "laracasts/flash": "^3.2",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.1",
