--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "barryvdh/laravel-dompdf": "^0.8.7",
         "darryldecode/cart": "^4.2",
         "doctrine/dbal": "^2.11",
         "fideloper/proxy": "^4.2",
@@ -18,6 +19,7 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.1",
+        "maatwebsite/excel": "^3.1",
         "midtrans/midtrans-php": "^2.3",
         "ramsey/uuid": "^4.1",
         "realrashid/sweet-alert": "^3.1",
